--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@fastify/swagger": "^9.5.1",
     "@fastify/swagger-ui": "^5.2.3",
+    "dotenv": "^17.2.0",
     "fastify": "^5.4.0",
     "fastify-type-provider-zod": "^5.0.2",
     "zod": "^4.0.5"
