--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^17.2.0",
     "fastify": "^5.4.0",
     "fastify-type-provider-zod": "^5.0.2",
+    "mysql2": "^3.14.2",
     "zod": "^4.0.5"
   },
   "devDependencies": {
