--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "tsx watch src/main.ts"
+    "start": "tsx watch src/main.ts"
   },
   "keywords": [],
   "author": "",
@@ -26,3 +26,4 @@
     "typescript": "^5.8.3"
   }
 }
+
