--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
   "devDependencies": {
     "@types/jest": "^30.0.0",
     "@types/node": "^24.0.14",
+    "@types/supertest": "^6.0.3",
     "jest": "^30.0.5",
     "prettier": "^3.6.2",
+    "supertest": "^7.1.4",
     "ts-jest": "^29.4.0",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.3",
